// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Audio - Snapshots > matches snapshot with MP3 audio 1`] = `
<audio
  class="w-full"
  controls=""
  data-testid="audio"
  preload="metadata"
  src="/song.mp3"
/>
`;

exports[`Audio - Snapshots > matches snapshot with OGG audio 1`] = `
<audio
  class="w-full"
  controls=""
  data-testid="audio"
  preload="metadata"
  src="/track.ogg"
/>
`;

exports[`Audio - Snapshots > matches snapshot with WAV audio 1`] = `
<audio
  class="w-full"
  controls=""
  data-testid="audio"
  preload="metadata"
  src="/sound.wav"
/>
`;

exports[`Audio - Snapshots > matches snapshot with autoPlay and muted 1`] = `
<audio
  autoplay=""
  class="w-full"
  controls=""
  data-testid="audio"
  preload="metadata"
  src="/audio.mp3"
/>
`;

exports[`Audio - Snapshots > matches snapshot with controls disabled 1`] = `
<audio
  class="w-full"
  data-testid="audio"
  preload="metadata"
  src="/audio.mp3"
/>
`;

exports[`Audio - Snapshots > matches snapshot with custom className 1`] = `
<audio
  class="w-full rounded-lg shadow-lg"
  controls=""
  data-testid="audio"
  preload="metadata"
  src="/audio.mp3"
/>
`;

exports[`Audio - Snapshots > matches snapshot with data-testid prop 1`] = `
<audio
  class="w-full"
  controls=""
  data-testid="custom-test-id"
  preload="metadata"
  src="/audio.mp3"
/>
`;

exports[`Audio - Snapshots > matches snapshot with id prop 1`] = `
<audio
  class="w-full"
  controls=""
  data-testid="audio"
  id="hero-audio"
  preload="metadata"
  src="/audio.mp3"
/>
`;

exports[`Audio - Snapshots > matches snapshot with loop 1`] = `
<audio
  class="w-full"
  controls=""
  data-testid="audio"
  loop=""
  preload="metadata"
  src="/audio.mp3"
/>
`;

exports[`Audio - Snapshots > matches snapshot with multiple custom attributes 1`] = `
<audio
  autoplay=""
  class="w-full rounded-xl border-2"
  controls=""
  data-testid="audio"
  loop=""
  preload="auto"
  src="/complex.mp3"
/>
`;

exports[`Audio - Snapshots > matches snapshot with preload attribute 1`] = `
<audio
  class="w-full"
  controls=""
  data-testid="audio"
  preload="none"
  src="/audio.mp3"
/>
`;

exports[`Audio - Snapshots > matches snapshot with required props 1`] = `
<audio
  class="w-full"
  controls=""
  data-testid="audio"
  preload="metadata"
  src="/audio.mp3"
/>
`;
